--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,12 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
 .idea/dictionaries
+.idea/gradle.xml
 .idea/libraries
+.idea/modules.xml
+.idea/tasks.xml
+.idea/workspace.xml
 
 # Keystore files
 *.jks
@@ -53,3 +54,6 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# macOS
+.DS_Store
